add LoanCalculateController
