# loan_deal_app/src/main/java/ru/nkashlev/loan_deal_app/deal/entity/Application.java
@@ -4,6 +4,7 @@ import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import lombok.Setter;
 import org.hibernate.annotations.Type;
+import ru.nkashlev.loan_deal_app.deal.entity.util.StatusHistory;
 import ru.nkashlev.loan_deal_app.deal.model.ApplicationStatusHistoryDTO;
 import ru.nkashlev.loan_deal_app.deal.model.LoanOfferDTO;
 
@@ -20,30 +21,34 @@ public class Application {
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     @Column(name = "application_id")
-    private Long application_id;
+    private Long applicationId;
 
     @Enumerated(EnumType.STRING)
     @Column(name = "status")
     private ApplicationStatusHistoryDTO.StatusEnum status;
 
     @Column(name = "creation_date")
-    private LocalDate creation_date;
+    private LocalDate creationDate;
 
     @Type(type = "jsonb")
     @Column(name = "applied_offer")
-    private LoanOfferDTO applied_offer;
+    private LoanOfferDTO appliedOffer;
 
     @Column(name = "sign_date")
-    private LocalDate sign_date;
+    private LocalDate signDate;
 
     @Column(name = "ses_code")
-    private Long ses_code;
+    private Long sesCode;
 
     @Type(type = "jsonb")
     @Column(name = "status_history")
-    private List<ApplicationStatusHistoryDTO> status_history;
+    private List<ApplicationStatusHistoryDTO> statusHistory;
 
     @ManyToOne(fetch = FetchType.LAZY)
     @JoinColumn(name = "client_id", referencedColumnName = "client_id")
     private Client client;
+
+    @OneToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "credit_id", referencedColumnName = "credit_id")
+    private Credit credit;
 }
